--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "gatsby": "^5.5.0",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-google-gtag": "^5.10.0",
     "gatsby-plugin-manifest": "^5.5.0",
     "gatsby-plugin-offline": "^6.5.0",
     "gatsby-plugin-react-helmet": "^6.5.0",
@@ -72,7 +73,7 @@
       "git add"
     ]
   },
-"resolutions": {
+  "resolutions": {
     "node-sass": "^6.0.1"
   }
 }
