--- a/package.json
+++ b/package.json
@@ -14,42 +14,43 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
-    "gatsby": "^5.5.0",
+    "@emotion/react": "^11.11.3",
+    "bootstrap": "^5.3.2",
+    "gatsby": "^5.13.1",
     "gatsby-image": "^2.4.7",
-    "gatsby-plugin-google-gtag": "^5.10.0",
-    "gatsby-plugin-manifest": "^5.5.0",
-    "gatsby-plugin-offline": "^6.5.0",
-    "gatsby-plugin-react-helmet": "^6.5.0",
-    "gatsby-plugin-sass": "^6.5.0",
-    "gatsby-plugin-sharp": "^5.5.0",
-    "gatsby-source-filesystem": "^5.5.0",
-    "gatsby-transformer-sharp": "^5.5.0",
-    "nanoid": "^4.0.0",
-    "node-sass": "^8.0.0",
+    "gatsby-plugin-google-gtag": "^5.13.0",
+    "gatsby-plugin-manifest": "^5.13.0",
+    "gatsby-plugin-offline": "^6.13.0",
+    "gatsby-plugin-react-helmet": "^6.13.0",
+    "gatsby-plugin-sass": "^6.13.0",
+    "gatsby-plugin-sharp": "^5.13.0",
+    "gatsby-source-filesystem": "^5.13.0",
+    "gatsby-transformer-sharp": "^5.13.0",
+    "nanoid": "^5.0.4",
+    "node-sass": "^9.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.0",
+    "react-awesome-reveal": "^4.2.7",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
     "react-helmet": "^6.1.0",
-    "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.9",
-    "react-tilt": "^0.1.4"
+    "react-scroll": "^1.9.0",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "8.33.0",
+    "eslint": "8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1"
   },
   "repository": {
     "type": "git",
